# Django_black_shop

./: README.md  db.sqlite3  pyproject.toml
cart/templates/cart/: detail.html
config/: settings.py  urls.py
main/: admin.py  apps.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/static/css/: base.css
main/templates/main/: base.html
main/templates/main/index/: index.html
main/templates/main/product/: detail.html
orders/migrations/: 0001_initial.py
users/: views.py
users/migrations/: 0001_initial.py
users/templates/users/: registration.html
